# iwct

./: .gitignore  CMakeLists.txt  README.md  index.html  params.json
iw/: CMakeLists.txt  imagegraph.cpp  imagegraph.h  imagegraph.i  imageregiongraph.cpp  imageregiongraph.h  imageregiongraph.i  iw.proto  labelprop.cpp  labelprop.h  taskqueue.hpp  util.cpp  util.h  util.py
iw/apps/: CMakeLists.txt  iwct_import_dataset.py  iwct_run_pipeline.py  iwct_update_code.py
iw/eval/: CMakeLists.txt
iw/eval/labelprop/: CMakeLists.txt
iw/flow/: CMakeLists.txt
iw/flow/app/: CMakeLists.txt
iw/flow/util/: CMakeLists.txt  image_matcher_config.py  match_batches_mapper.h  match_batches_reducer.h  mr_cbir_bow_query_index.cpp  mr_cbir_count_features.cpp  mr_cbir_create_index_shards.cpp  mr_cbir_merge_query_results.cpp  mr_cbir_query_index_shard.cpp  mr_cbir_score_results.cpp  mr_create_bag_of_words.cpp  mr_create_unique_match_candidates.cpp  mr_drop_value.cpp  mr_extract_features.cpp  mr_find_duplicates.cpp  mr_match_batches.cpp  mr_merge_matches.cpp  mr_sort.cpp  mr_sort_match_candidates.cpp  util.py
iw/matching/: CMakeLists.txt  acransac_correspondences.cpp  acransac_correspondences.h  acransac_image_matcher.cpp  acransac_image_matcher.h  acransac_models.cpp  acransac_models.h  feature_extractor.cpp  feature_extractor.h  feature_extractor_density.py  feature_matcher.cpp  feature_matcher.h  image_matcher.cpp  image_matcher.h  point2d_index.cpp  point2d_index.h  py_featureextractor.i  visutil.cpp  visutil.h
iw/matching/cbir/: CMakeLists.txt  cbir.proto
iw/matching/test/: CMakeLists.txt  feature_extractor_density_test.py
iw/matching/vgg/: CMakeLists.txt  vgg_feature_extractor.cpp  vgg_feature_extractor.h
iw/test/: CMakeLists.txt  test_proto.cpp  test_stacktrace.cpp  test_taskqueue.cpp
iw/vis/: CMakeLists.txt
iw/vis/dynamic/: CMakeLists.txt
iw/vis/static/: CMakeLists.txt
snap/: CMakeLists.txt  install_gperftools.py  install_protobuf.py
snap/Eigen/: CMakeLists.txt
snap/ansible/: CMakeLists.txt  __init__.py
snap/ansible/callback_plugins/: CMakeLists.txt
snap/ansible/inventory/: CMakeLists.txt
snap/ansible/playbook/: CMakeLists.txt  __init__.py
snap/ansible/runner/: CMakeLists.txt  __init__.py
snap/ansible/utils/: CMakeLists.txt  plugins.py
snap/base64/: CMakeLists.txt  decode.h  encode.h
snap/boost/: CMakeLists.txt
snap/boost/bloom_filter/: .files.txt.swp  dynamic_bloom_filter.hpp
snap/boost/filesystem/: CMakeLists.txt
snap/boost/thread/: CMakeLists.txt
snap/boto/: CMakeLists.txt
snap/boto/ec2/: blockdevicemapping.py
snap/cirrus/: CMakeLists.txt  util.py
snap/cirrus/ami/: CMakeLists.txt  ami_cli.py  manager.py
snap/cirrus/cluster/: CMakeLists.txt  cli.py  cluster_cli.py  config.py  ec2cluster.py  mapr.py
snap/cirrus/weblaunch/: manage.py
snap/cirrus/workstation/: CMakeLists.txt  cli.py  workstation.py
snap/ctis/: CMakeLists.txt  COMPILE.m  DEMO.m  README.txt  ccCommon.hpp  ccData.hpp  ccDistance.cpp  ccDistance.hpp  ccHKmeans.cpp  ccHKmeans.hpp  ccInvertedFile.cpp  ccInvertedFile.hpp  ccInvertedFileExtra.cpp  ccInvertedFileExtra.hpp  ccKdt.cpp  ccKdt.hpp  ccLsh.cpp  ccLsh.hpp  ccMatrix.hpp  ccNormalize.cpp  ccNormalize.hpp  ccVector.hpp
snap/deluge/: CMakeLists.txt  MyReducerPrefixGroupingComparator.java  README.md  core.py  debug.cpp  debug.h  deluge.h  deluge.proto  job.cpp  job.h  join.cpp  join.h  lebesgueset.py  mr.py  notification.py  pertio.cpp  pertio.h  provenance.py  runner.py  s3dict.py  s3dict_test.py  scheduler.py  std.cpp  std.h  util.cpp  util.h
snap/deluge/pipes/: CMakeLists.txt  HadoopPipes.cc  StringUtils.cc
snap/deluge/test/: CMakeLists.txt  TestPertSupport.java  abstract_flow_test.py  distributed_cache.py  mapr_distributed_cache.py  mr_distributed_cache.cpp  mr_mapr_distributed_cache.cpp  mr_test.py  parallel_1.py  parallel_2.py  parallel_test.py  provenance_test.py  test.cpp
snap/flann/: CMakeLists.txt  flann.hpp
snap/flann/algorithms/: autotuned_index.h  kdtree_index.h  nn_index.h
snap/flann/nn/: index_testing.h
snap/flann/tbb/: bodies.hpp
snap/flann/util/: matrix.h
snap/google/base/: CMakeLists.txt  basictypes.h  commandlineflags.h  hashutils.h  py_base.i  stringprintf.cc
snap/google/gflags/: CMakeLists.txt
snap/google/glog/: CMakeLists.txt  config.h
snap/google/gtest/: CMakeLists.txt
snap/jpeg/: CMakeLists.txt
snap/meanshift/: CMakeLists.txt  meanshift.cpp  meanshift.h  meanshift_test.cpp
snap/opencv2/: CMakeLists.txt  cvconfig.h
snap/opencv2/core/: CMakeLists.txt
snap/opencv2/features2d/: CMakeLists.txt
snap/opencv2/flann/: CMakeLists.txt
snap/opencv2/highgui/: CMakeLists.txt
snap/opencv2/imgproc/: CMakeLists.txt
snap/opencv2/nonfree/: CMakeLists.txt  features2d.hpp
snap/orsa/: CMakeLists.txt  conditioning.cpp  conditioning.hpp  fundamental_model.cpp  fundamental_model.hpp  homography_model.cpp  homography_model.hpp  orsa_model.cpp  orsa_model.hpp
snap/orsa/numeric/: CMakeLists.txt  matConversion.hpp  matrix.cpp  matrix.h  numerics.cpp  numerics.h  svd.hpp  vector.cpp
snap/orsa/test/: CMakeLists.txt  homography_model_test.cpp  homography_orsa_test.cpp  testing.h
snap/pert/: .gitignore  CMakeLists.txt  README.md  pert.h  pert.proto  prototable.cpp  prototable.h  py_pert.i  stringtable.cpp  stringtable.h  utils.cpp  utils.h
snap/pert/core/: CMakeLists.txt  bloom.cpp  bloom.h  cbfile.cpp  cbfile.h  common.h  (+15 more)
snap/png/: CMakeLists.txt
snap/progress/: progress.hpp
snap/pyglog/: CMakeLists.txt  COPYING  PKG-INFO  README  RELEASE_NOTES  __init__.py
snap/scul/: CMakeLists.txt  scul.hpp
snap/snappy/: CMakeLists.txt
snap/zlib/: CMakeLists.txt
tide/: .gitignore  CMakeLists.txt  tide.cpp  tide.h  tide.proto  tide.py  tide_test.cpp
tide/util/: CMakeLists.txt  add_distractors.py  avg.py  correct_bb_for_crop.py  crop.py  extract_images_from_pert.py  extract_pos_images_from_pert.py  force_delete_s3_bucket.py  pack_tide_images_to_pert.py  print_dataset_stats.py  slurp_images_to_pert.py  upload_images_to_s3.py
tide/viewer/: CMakeLists.txt  tide_index.html  viewer.py
(+256 files in other folders)
