CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ADD_SUBDIRECTORY(ansible)
ADD_SUBDIRECTORY(base64)
ADD_SUBDIRECTORY(boost)
ADD_SUBDIRECTORY(boto)
ADD_SUBDIRECTORY(ctis)
ADD_SUBDIRECTORY(deluge)
ADD_SUBDIRECTORY(Eigen)
ADD_SUBDIRECTORY(flann)
ADD_SUBDIRECTORY(google)
ADD_SUBDIRECTORY(jpeg)
ADD_SUBDIRECTORY(meanshift)
ADD_SUBDIRECTORY(opencv2)
ADD_SUBDIRECTORY(orsa)
ADD_SUBDIRECTORY(pert)
ADD_SUBDIRECTORY(png)
ADD_SUBDIRECTORY(progress)
ADD_SUBDIRECTORY(pyglog)
ADD_SUBDIRECTORY(scul)
ADD_SUBDIRECTORY(snappy)
ADD_SUBDIRECTORY(zlib)

